--- a/微课视频剪辑.md
+++ b/微课视频剪辑.md
@@ -5,11 +5,11 @@
 > 如果没有拷贝可以点击这里 [下载](url/)
 ### 2.用安装好的 Smart Player播放器打开你的视频（.dav）。
 ### 3.点击右上角导出按钮
-![导出](url)
+![导出](https://github.com/Lee-CQ/Blog/blob/master/Photos/SmartPlayer%E5%AF%BC%E5%87%BA.png)
 ### 4.选择你要导出的文件和格式，以及截取时间。
-![导出选项](url)
+![导出选项](https://github.com/Lee-CQ/Blog/blob/master/Photos/SmartPlayer%E9%80%89%E6%8B%A9%E5%AF%BC%E5%87%BA%E6%A0%BC%E5%BC%8F%E5%92%8C%E6%97%B6%E9%97%B4.png)
 > 也可以在下面的时间条上截取需要的时间。
-![截取时间](url)
+![截取时间](https://github.com/Lee-CQ/Blog/blob/master/Photos/SmartPlayerGetTime.png)
 ### 5.一切准备就绪后点击“开始导出”
 ## Over
 
