微课视频剪辑 -.exe路径修改

--- a/微课视频剪辑.md
+++ b/微课视频剪辑.md
@@ -2,7 +2,7 @@
 ---
 - [ ] ok
 ### 1.安装从教室拷贝回来的播放器  
-> 如果没有拷贝可以点击这里 [下载](url/)
+> 如果没有拷贝可以点击这里 [下载](sup/SmartPlayer.exe)
 ### 2.用安装好的 Smart Player播放器打开你的视频（.dav）。
 ### 3.点击右上角导出按钮
 ![导出](https://github.com/Lee-CQ/Blog/blob/master/Photos/SmartPlayer%E5%AF%BC%E5%87%BA.png)
